# star-light

./: .gitignore  pyproject.toml  start-onefile.spec  start.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: Index.html  base.html  view.html
core/utils/: star.py
starlight/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
