[tool.poetry]
name = "star-light"
version = "0.1.0"
description = ""
authors = ["Timur Samatov <cooool.loki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
requests = "^2.31.0"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
